detach pivot + resource collection
