# app/Http/Controllers/Admin/V1/ActivitiesWeekdaysController.php
@@ -9,6 +9,7 @@ use App\Traits\ApiResponse;
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
 use Illuminate\Support\Facades\DB;
+use Illuminate\Support\Facades\Log;
 use App\Http\Controllers\Controller;
 use App\Interfaces\ActivityInterface;
 use App\Http\Controllers\Admin\V1\Docs;
@@ -107,6 +108,12 @@ class ActivitiesWeekdaysController extends Controller
         }
     }
 
+    /*
+    this update method takes activity slug and weekday as required parameters
+    if the start time and end time are not specified, it detaches this weekday from the activity
+    else it syncs the weekday to the activity
+    */
+
     // --- update activity - weekday
 
     /**
@@ -184,15 +191,17 @@ class ActivitiesWeekdaysController extends Controller
                 $start_time = $item['start_time'];
                 $end_time = $item['end_time'];
                 $weekday_id = WeekDay::where('slug', $weekday)->value('id');
+              
                 $syncData[$weekday_id] = [
 
                     'start_time' => $start_time,
                     'end_time' => $end_time
                 ];
+          }
+      
+        $activity->weekdays()->sync($syncData);
 
-            }
-            $activity->weekdays()->sync($syncData);
-            return $this->successResponse(__("messages.records_attached"));
+        return $this->successResponse(__("messages.records_attached"));
             
             // --- hayde bt nazil the same start and end time for every combination activity-weekday provided
             // $activity = $this->activityRepository->getActivityBySlug($request);
@@ -207,6 +216,84 @@ class ActivitiesWeekdaysController extends Controller
             // }
             // $activity->weekdays()->syncWithPivotValues($a, ["start_time" => $request->start_time, "end_time" => $request->end_time]);
             // return $this->successResponse(__("messages.records_attached"));
+
+        } catch (Exception $e) {
+            return $this->errorResponse($e->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
+    }
+
+     /**
+     
+     * @OA\Put(
+     *     path="/admin/v1/delete-activity-week/{activity_slug}",
+     *     tags={"Activity-Week"},
+     *     security={{ "APIKey": {} }},
+     *      @OA\Parameter(
+     *         name="activity_slug",
+     *         in="path",
+     *         description="the activity to update",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *    @OA\RequestBody(
+     *           required=true,
+     *           description="Body request needed to delete activity-weekday",
+     *            @OA\MediaType(
+     *            mediaType="application/json",
+     *            @OA\Schema(
+     *               type="object",
+     *                 @OA\Property(property="weekday",type="string"),
+     *                 ),
+     *             ),
+     *      ),
+     *      @OA\Response(
+     *          response="200",
+     *          description="Successful Operation",
+     *          @OA\JsonContent(
+     *          type="object",
+     *          @OA\Property(property="success", type="boolean", description="status" ),
+     *          @OA\Property(property="data", type="object", description="data" ),
+     *          @OA\Property(property="message", type="string", description="message" ),
+     *          ),
+     *        ),
+     *       @OA\Response(
+     *          response="422",
+     *          description="Unprocessable Entity",
+     *          @OA\JsonContent(
+     *          type="object",
+     *          @OA\Property(property="success", type="boolean", description="status" ),
+     *          @OA\Property(property="data",type="array",  @OA\Items( type="object"  ),description="data" ),
+     *          @OA\Property(property="message", type="string", description="message" ),
+     *          ),
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request",
+     *          @OA\JsonContent(
+     *          type="object",
+     *          @OA\Property(property="success", type="boolean", description="status" ),
+     *          @OA\Property(property="data",type="array",  @OA\Items( type="object"  ),description="data" ),
+     *          @OA\Property(property="message", type="string", description="message" ),
+     *          ),
+     *       ),
+     * )
+     */
+
+    public function destroy(ActivityWeekdayRequest $request)
+    {
+        try {
+            $activity = $this->activityRepository->getActivityBySlug($request);
+            //DB::enableQueryLog();
+            $weekday = $request->weekday;
+            $weekday_id = WeekDay::where('slug', $weekday)->value('id');
+            $bool = $activity->weekdays()->detach($weekday_id);
+            //$queryLog = DB::getQueryLog(); Log::info(json_encode($queryLog));
+            if ($bool)
+                return $this->successResponse(__("messages.record_detached"));
+            else
+                return $this->successResponse("something went wrong");
 
         } catch (Exception $e) {
             return $this->errorResponse($e->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
